--- a/djangoapp/core/templates/base.html
+++ b/djangoapp/core/templates/base.html
@@ -28,13 +28,13 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'client_list' %}">Clientes</a>
+                        <a class="nav-link" href="{% url 'client_list' %}">Clients</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'farm_list' %}">Fazendas</a>
+                        <a class="nav-link" href="{% url 'farm_list' %}">Farms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'transaction_list' %}">Transações</a>
+                        <a class="nav-link" href="{% url 'transaction_list' %}">Transactions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'menu' %}">Menu</a>
