--- a/djangoapp/users/templates/transactions.html
+++ b/djangoapp/users/templates/transactions.html
@@ -18,6 +18,7 @@
                 <td>{{ transaction.farm.name }}</td>
                 <td>{{ transaction.transaction_date }}</td>
                 <td>${{ transaction.price }}</td>
+                <td>${{ transaction.transaction_type }}</td>
             </tr>
             {% endfor %}
         </tbody>
